# spatial-datastructures

./: CMakeLists.txt  KDNode.h  KDTree.h  KDTree.inl  Point.h  QuadNode.h  QuadTree.h  QuadTree.inl  Rectangle.h  quad_test.cpp  tree_test.cpp
benchmark/: CMakeLists.txt  bm.cpp  tree_bm.cpp
spatial/: KDNode.h  KDTree.h  KDTree.inl  Point.h  QuadNode.h  QuadTree.h  QuadTree.inl  RNode.h  RTree.h  RTree.inl  SpatialTreeBase.h
tests/: CMakeLists.txt  rtree_test.cpp  tree_test.cpp  validation_test.cpp
